# lessonPlaner

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build_for_windows.sh  toolchain-mingw.cmake
app/: CMakeLists.txt  main.cpp
inc/: availability.h  department.h  lessonplanner.h  logging.h  programSettings.h  programsettings.h  scheduledunit.h  scheduleunit.h  school.h  teacher.h  teacherassigner.h  timetablescheduler.h
libs/: CMakeLists.txt
src/: CMakeLists.txt  availability.cpp  department.cpp  lessonplanner.cpp  logging.cpp  programSettings.cpp  programsettings.cpp  scheduledunit.cpp  scheduleunit.cpp  school.cpp  teacher.cpp  teacherassigner.cpp  timetablescheduler.cpp
test/: example.xlsx
